tests/expectations/compiler/dynamic_dispatch/dynamic_contains_type_param_fail.out
Error [ETYC0372156]: The intrinsic `_dynamic_contains` cannot have type parameters.
    --> compiler-test:9:24
     |
   9 |     let exists: bool = _dynamic_contains::[bool](prog, net, m, key);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
